# tundle

./: .gitignore  README.md  all-for-step3.sh  helper-left.sh  helper.sh  kindle-to-pdf.sh  pyproject.toml  step1.py  step2.py  step3-helper.sh  step3.py  step4.py
docs/: blog-abstruct.md  process_flow.mermaid  weasyprint-setup.md
templates/: index_template.html  server_template.py
test/: analyze_pdf.py  extract_pdf_images.py  generate_text_pdf.py  ocr_single_image.py  test_coordinates.py  test_find_kindle.py  test_pytorch_metal.py  test_single_capture.py  test_weasyprint.py  test_weasyprint_all.py  test_window_capture.py  test_xhtml2pdf.py
